--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="./assets/images/favicon.png" />
-    <title>KiwiCo Color Carnival</title>
+    <title>Color Carnival</title>
     <meta name="description" content="A website where you can play the most fun game ever" />
 
   </head>
