--- a/views/ColorGame/ColorGame.scss
+++ b/views/ColorGame/ColorGame.scss
@@ -39,6 +39,7 @@
 
       justify-content: center;
       align-items: center;
+      margin: auto;
       width: 60vw;
       min-width: 350px;
       padding-top: 1rem;
@@ -104,6 +105,7 @@
         align-items: center;
         grid-area: solution;
         text-align: center;
+        margin: auto;
 
         p {
           word-break: break-word;
